DisplayDataActivity RecyclerView works

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,15 @@
         </activity>
         <activity android:name=".auth.LoginActivity" >
         </activity>
-        <activity android:name=".ble.DisplayDataActivity" />
-        <activity android:name=".ble.GattServerActivity">
+        <activity android:name=".ble.DisplayDataActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".ble.GattServerActivity">
 
         </activity>
     </application>
